WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46754
ASSERT when launching the plugin process
https://bugs.webkit.org/show_bug.cgi?id=46754
Summary
ASSERT when launching the plugin process
Anders Carlsson
Reported
2010-09-28 14:05:48 PDT
When we try to spawn a plug-in process and it fails (because the web process isn't universal for example) we assert.
Attachments
Patch
(5.50 KB, patch)
2010-09-28 14:10 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-09-28 14:06:01 PDT
<
rdar://problem/8484570
>
Anders Carlsson
Comment 2
2010-09-28 14:10:59 PDT
Created
attachment 69102
[details]
Patch
Anders Carlsson
Comment 3
2010-09-28 14:27:41 PDT
Committed
r68562
: <
http://trac.webkit.org/changeset/68562
>
WebKit Review Bot
Comment 4
2010-09-28 15:31:26 PDT
http://trac.webkit.org/changeset/68562
might have broken GTK Linux 32-bit Release The following changes are on the blame list:
http://trac.webkit.org/changeset/68561
http://trac.webkit.org/changeset/68562
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug