ASSERT when launching the plugin process https://bugs.webkit.org/show_bug.cgi?id=46754 <rdar://problem/8484570>

Reviewed by Sam Weinig.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::ProcessLauncher::launchProcess):
Don't assert if we fail to launch the process. Instead, set the connection identifier
and process ID to null and deallocate the port we created.

* UIProcess/Plugins/PluginProcessProxy.cpp:
(WebKit::PluginProcessProxy::pluginProcessCrashedOrFailedToLaunch):
Move all code from didClose here.

(WebKit::PluginProcessProxy::didClose):
Call pluginProcessCrashedOrFailedToLaunch.

(WebKit::PluginProcessProxy::didFinishLaunching):
If we failed to launch, call pluginProcessCrashedOrFailedToLaunch.

Canonical link: https://commits.webkit.org/59249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68562 268f45cc-cd09-0410-ab3c-d52691b4dbfc